--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "primeng": "^8.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "webdriver-manager": "^12.1.7",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
