--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "smng:build"
+            "browserTarget": "smng:build",
+            "host": "0.0.0.0"
           },
           "configurations": {
             "production": {
